# wasm-cipher

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: static.yml
src/: cipher.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
www/public/css/: style.css
www/public/html/: privacy.html  terms.html
