[package]
name = "wasm-cipher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.8.4"
sha2 = "0.10.9"
base64 = "0.22.1"
wasm-bindgen = "0.2.100"
cbc = "0.2"
pbkdf2 = "0.12"
getrandom = { version = "0.2", features = ["js"]}
web-sys = { version = "0.3", features = ["console"] }
