[package]
name = "wasm-cipher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.11"
base64 = "0.22.1"
wasm-bindgen = "0.2.100"
pbkdf2 = "0.13"
getrandom = { version = "0.4", features = ["wasm_js"]}
web-sys = { version = "0.3", features = ["console"] }
aes-gcm = "0.11"
